--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -20,12 +20,15 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 # Mr Ash
 
 * [coordinate ascent and parallel version](mr_ash_sca.html)
-* [Ridge regression for trend filtering](ridge_trend_filter.html)
-* [Ridge regression via conjugate gradient](ridge_conjugate_gradient.html)
 * [mr.ash.alpha applied to changepoint problems](mr.ash.changepoint.html)
 * [teach myself ADMM (L1 and L0)](admm_01.html)
-
 * [combining mr.ash and ridge regression/iterative ridge regression](mr.ash_ridge.html)
+
+# Ridge Regression
+
+* [Ridge regression for trend filtering](ridge_trend_filter.html)
+* [Ridge regression via conjugate gradient](ridge_conjugate_gradient.html)
+* [EM for hyperparameters Ridge regression](ridge_em.html)
 
 
 # Mash
