workflowr::wflow_publish("index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -24,6 +24,8 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [combining mr.ash and ridge regression/iterative ridge regression](mr.ash_ridge.html)
 * [bimodal example from "Bayesian lasso"" paper](blasso_bimodal_example.html)
 * [mr ash vs lasso: example where lasso does better](mr_ash_vs_lasso.html)
+* [mr ash vs lasso: follow-up checking objective fn](mr_ash_vs_lasso_02.html)
+
 
 # Ridge Regression
 
